--- a/insights.html
+++ b/insights.html
@@ -20,9 +20,9 @@
     <a href="index.html" class="lang-content" data-lang="greenlandic">Saaq</a>
     <a href="index.html" class="lang-content" data-lang="danish">Hjem</a>
     
-    <a href="#mission" class="lang-content" data-lang="english">Mission</a>
-    <a href="#mission" class="lang-content" data-lang="greenlandic">Anguniakkavut</a>
-    <a href="#mission" class="lang-content" data-lang="danish">Mission</a>
+    <a href="index.html#mission" class="lang-content" data-lang="english">Mission</a>
+    <a href="index.html#mission" class="lang-content" data-lang="greenlandic">Anguniakkavut</a>
+    <a href="index.html#mission" class="lang-content" data-lang="danish">Mission</a>
     
     <a href="insights.html" class="lang-content" data-lang="english">Insights</a>
     <a href="insights.html" class="lang-content" data-lang="greenlandic">Paasisimasat</a>
