--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                 
                 <div class="hero-divider"></div>
                 
-                <p class="hero-subtitle lang-content" data-lang="english">Discussion • Expertise • Engagement</p>
-                <p class="hero-subtitle lang-content" data-lang="greenlandic">Oqaloqatigiinneq • Ilisimasat • Peqataaneq</p>
-                <p class="hero-subtitle lang-content" data-lang="danish">Debat • Ekspertise • Engagement</p>
+                <p class="hero-subtitle lang-content" data-lang="english">Expertise • Discussion • Engagement</p>
+                <p class="hero-subtitle lang-content" data-lang="greenlandic">Ilisimasat • Oqaloqatigiinneq • Peqataaneq</p>
+                <p class="hero-subtitle lang-content" data-lang="danish">Ekspertise • Debat • Engagement</p>
 
                 <a href="#mission" class="scroll-indicator"><i class="fa-solid fa-chevron-down"></i></a>
             </div>
