--- a/index.html
+++ b/index.html
@@ -12,74 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    
-    <style>
-        /* Targeted Footer Enhancements */
-        .site-footer {
-            padding: 6rem 0 3rem;
-            background: var(--slate-light); /* Distinct footer background */
-            border-top: 1px solid #e2e8f0;
-            text-align: center;
-        }
-        .footer-grid {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 4rem;
-        }
-        .footer-brand .logo-text {
-            color: var(--arctic-navy);
-            display: block;
-            margin-bottom: 1.5rem;
-            font-size: 1.8rem;
-        }
-        .footer-contact-info {
-            color: var(--text-muted);
-            font-size: 0.95rem;
-            margin-bottom: 1.5rem;
-        }
-        .social-icons {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            font-size: 1.4rem;
-        }
-        .social-icons a {
-            color: var(--arctic-navy);
-            transition: color 0.3s ease;
-        }
-        .social-icons a:hover {
-            color: var(--greenland-red);
-        }
-        .footer-support {
-            max-width: 600px;
-            padding: 2.5rem;
-            background: white;
-            border-radius: 1rem;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.03);
-        }
-        .footer-support h5 {
-            font-size: 1.4rem;
-            margin-bottom: 1rem;
-            color: var(--arctic-navy);
-        }
-        .support-details {
-            font-size: 0.95rem;
-            line-height: 1.6;
-        }
-        .footer-bottom {
-            margin-top: 5rem;
-            padding-top: 2rem;
-            border-top: 1px solid rgba(0,0,0,0.05);
-            font-size: 0.85rem;
-            color: var(--text-muted);
-        }
-        .footer-bottom a {
-            color: var(--arctic-navy);
-            text-decoration: none;
-            font-weight: 600;
-        }
-    </style>
+
 </head>
 <body class="home-page">
 
@@ -166,19 +99,19 @@
                     <div class="lang-content" data-lang="english">
                         <p class="lead-text" style="font-weight: 600; font-size: 1.4rem; margin-bottom: 2rem;">Integrating civil society into a democratic, educational, and expert-led discussion on foreign policy.</p>
                         <p>The Greenland Foreign Policy Society is a voluntary association with the aim of promoting knowledge of and increasing interest in foreign policy issues in Greenland. We exist to create a space where expertise and civil society meet to share qualified opinions and analysis.</p>
-                        <p>Our purpose is to facilitate discussions, publish insights, and ensure a present voice in international fora. We provide our members and the public with direct access to foreign policy through contact with diplomatic missions and defense establishments, ensuring that civil society remains a conscious participant in international matters.</p>
+                        <p>Our purpose is to facilitate discussions, share insights, and ensure Greenlandic representation in international matters. We provide our members and the public with direct access to foreign policy through contact with foreign policy and security actors, ensuring that civil society remains a conscious participant in matters concerning Greenland, regionally and globally.</p>
                         <p class="sub-text" style="font-style: italic; opacity: 0.9; margin-top: 2rem;">The association is independent of the public sector, political parties, as well as business and organizational interests. We do not take positions on political issues, but function exclusively as a mediator of information, debate, and contacts.</p>
                     </div>
 
                     <div class="lang-content" data-lang="greenlandic">
                         <p class="lead-text" style="font-weight: 600; font-size: 1.4rem; margin-bottom: 2rem;">Inuiaqatigiit nipaat ilisimasallu tunngavigalugit oqallinnermut ilanngunneri.</p>
-                        <p>Nunanut Allanut Politikkeqarnermut Peqatigiiffik nammineq piumassutsimik ingerlatatut siunertaqarpoq nunanut allanut tunngasut ilisimaneqarnerulernissaat soqutigineqarnerulernissaallu. Peqatigiiffik oqalliffittut attaveqaatitullu inissisimavoq, ilisimasallit inuiaqatigiillu akornanni qualified-mik isummanik misissueqqissaarnernillu share-iiffittut.</p>
-                        <p>Anguniagaraarput oqaloqatigiinnerit, isummanik saqqummersitsinerit nunat tamalaat akornanni nipaalluta peqataaneq. Ilaasortavut inuiaqatigiillu nunanut allanut tunngasunik toqqaannartumik attaveqalersittarpavut, diplomat-itut aallartitaqarfiit illersornissaqarfiullu attaviginerisigut.</p>
-                        <p class="sub-text" style="font-style: italic; opacity: 0.9; margin-top: 2rem;">Peqatigiiffik naalakkersuinikkut arlaannulluunniit atanngilaq, inuiaqatigiit akornanni oqalliffittut arlaannulluunniit pituttorsimanngitsutut inissisimasuulluni. Politikikkut isummanik aaliangersimasunik tigummiassanngilagut, paasissutissanilli, oqallinnermik attaveqarnermillu siammartiterisuinnaalluta.</p>
+                        <p>Nunanut Allanut Politikkeqarnermut Peqatigiiffik nunanut allanut tunngasut ilisimaneqarnerulernissaat nunatsinni soqutigineqarnerulernissaallu siunertaralugu nammineq kajumissutsimik ingerlanneqarpoq. Peqatigiiffik ilisimasallit inuiaqatigiillu akornanni paasisimanninneq, misissueqqissaarnernillu, inuinnannillu isummanik oqalliffittut attaveqaatitullu inissisimavoq.</p>
+                        <p>Oqaloqatigiinnerit, isummanik saqqummersitsinerit nunat tamalaat akornanni nunatsinniit nipit sassarlugit peqataaneq anguniagaraarput. Ilaasortavut inuiaqatigiillu nunanut allanut tunngasunik toqqaannartumik attaveqalersittarpavut, sinniisut aallartitaqarfiillu illersornissaqarfiullu oqallinneq ilinniaqatigiinnerlu suliniuutigivagut.</p>
+                        <p class="sub-text" style="font-style: italic; opacity: 0.9; margin-top: 2rem;">Peqatigiiffik naalakkersuinikkut partiinut arlaannulluunniit atanngilaq, firmamullu arlaannulluunniit pituttorsimanngitsutut inissisimasuulluni. Paasissutissanik, oqallinnermik attaveqarnermillu siammartiterisuinnaalluta ingerlavugut, politikikkut isummanik aaliangersimasunik aqunneqannata.</p>
                     </div>
 
                     <div class="lang-content" data-lang="danish">
-                        <p class="lead-text" style="font-weight: 600; font-size: 1.4rem; margin-bottom: 2rem;">Integration af civilsamfundet i en demokratisk, uddannende og ekspertbaseret debat om udenrigspolitik.</p>
+                        <p class="lead-text" style="font-weight: 600; font-size: 1.4rem; margin-bottom: 2rem;">Integration af civilsamfundet i en uddannende, ekspertbaseret demokratisk debat om udenrigspolitik.</p>
                         <p>Grønlands udenrigspolitiske forening er en frivillig forening med det formål at fremme kendskabet til og øge interessen for udenrigspolitiske emner i Grønland. Vi eksisterer for at skabe et rum, hvor ekspertise og civilsamfund mødes for at dele kvalificerede holdninger og analyser.</p>
                         <p>Vores formål er at facilitere drøftelser, udgive indblik og sikre en aktiv tilstedeværelse i internationale fora. Vi giver vores medlemmer og offentligheden direkte adgang til udenrigspolitik gennem kontakt med diplomatiske missioner og forsvarsinstitutioner.</p>
                         <p class="sub-text" style="font-style: italic; opacity: 0.9; margin-top: 2rem;">Foreningen er uafhængig af både det offentlige, politiske partier samt erhvervsmæssige og organisatoriske interesser. Vi tager ikke stilling til politiske spørgsmål, men fungerer udelukkende som formidler af information, debat og kontakter.</p>
@@ -220,6 +153,11 @@
 
         <section class="living-list-container">
             <div class="ticker-wrapper">
+		<span style="display:none;">🆕</span>
+            <div class="ticker-item"><span class="ticker-date">16 MAY 2026</span><i class="fa-solid fa-file-lines"></i> Article: The Future of Arctic Trade Routes</div>
+
+            <div class="ticker-item"><span class="ticker-date">20 MAY 2026</span><i class="fa-solid fa-file-lines"></i> Article: Diplomatic Horizons: Greenland’s New Voice</div>
+
                 <div class="ticker-item"><span class="ticker-date">FEB 2026</span><i class="fa-solid fa-file-lines"></i> Article: Arctic Security Update</div>
                 <div class="ticker-item"><span class="ticker-date">JAN 2026</span><i class="fa-solid fa-calendar-check"></i> Event: Nuuk Dialogue Forum</div>
                 <div class="ticker-item"><span class="ticker-date">DEC 2025</span><i class="fa-solid fa-file-lines"></i> Insight: Fisheries Policy Review</div>
