--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </div>
 
                     <div class="lang-content" data-lang="greenlandic">
-                        <p class="lead-text" style="font-weight: 600; font-size: 1.4rem; margin-bottom: 2rem;">Inuiaqatigiit nipaat ilisimasallu tunngavigalugit oqallinnermut ilanngunneri.</p>
+                        <p class="lead-text" style="font-weight: 600; font-size: 1.4rem; margin-bottom: 2rem;">Nunatsinni nunanut tamalaannut ilisimasallit tunngavigalugit inuiaqatigiit nipaat oqallinnermut ilanngunnissaat.</p>
                         <p>Nunanut Allanut Politikkeqarnermut Peqatigiiffik nunanut allanut tunngasut ilisimaneqarnerulernissaat nunatsinni soqutigineqarnerulernissaallu siunertaralugu nammineq kajumissutsimik ingerlanneqarpoq. Peqatigiiffik ilisimasallit inuiaqatigiillu akornanni paasisimanninneq, misissueqqissaarnernillu, inuinnannillu isummanik oqalliffittut attaveqaatitullu inissisimavoq.</p>
                         <p>Oqaloqatigiinnerit, isummanik saqqummersitsinerit nunat tamalaat akornanni nunatsinniit nipit sassarlugit peqataaneq anguniagaraarput. Ilaasortavut inuiaqatigiillu nunanut allanut tunngasunik toqqaannartumik attaveqalersittarpavut, sinniisut aallartitaqarfiillu illersornissaqarfiullu oqallinneq ilinniaqatigiinnerlu suliniuutigivagut.</p>
                         <p class="sub-text" style="font-style: italic; opacity: 0.9; margin-top: 2rem;">Peqatigiiffik naalakkersuinikkut partiinut arlaannulluunniit atanngilaq, firmamullu arlaannulluunniit pituttorsimanngitsutut inissisimasuulluni. Paasissutissanik, oqallinnermik attaveqarnermillu siammartiterisuinnaalluta ingerlavugut, politikikkut isummanik aaliangersimasunik aqunneqannata.</p>
@@ -271,4 +271,5 @@
         });
     </script>
 </body>
+
 </html>
