--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 
                 <div class="mission-statement text-center">
                     <div class="lang-content" data-lang="english">
-                        <p class="lead-text" style="font-weight: 600; font-size: 1.4rem; margin-bottom: 2rem;">Integrating civil society into a democratic, educational, and expert-led discussion on foreign policy.</p>
+                        <p class="lead-text" style="font-weight: 600; font-size: 1.4rem; margin-bottom: 2rem;">Integrating civil society into an educational, expert-led democratic discussion on foreign policy.</p>
                         <p>The Greenland Foreign Policy Society is a voluntary association with the aim of promoting knowledge of and increasing interest in foreign policy issues in Greenland. We exist to create a space where expertise and civil society meet to share qualified opinions and analysis.</p>
                         <p>Our purpose is to facilitate discussions, share insights, and ensure Greenlandic representation in international matters. We provide our members and the public with direct access to foreign policy through contact with foreign policy and security actors, ensuring that civil society remains a conscious participant in matters concerning Greenland, regionally and globally.</p>
                         <p class="sub-text" style="font-style: italic; opacity: 0.9; margin-top: 2rem;">The association is independent of the public sector, political parties, as well as business and organizational interests. We do not take positions on political issues, but function exclusively as a mediator of information, debate, and contacts.</p>
@@ -273,3 +273,4 @@
 </body>
 
 </html>
+
