--- a/insights.html
+++ b/insights.html
@@ -44,6 +44,10 @@
             <a href="insights.html" class="lang-content" data-lang="english">Insights</a>
             <a href="insights.html" class="lang-content" data-lang="greenlandic">Paasisimasat</a>
             <a href="insights.html" class="lang-content" data-lang="danish">Indblik</a>
+
+            <a href="team.html" class="lang-content" data-lang="english">The Team</a>
+            <a href="team.html" class="lang-content" data-lang="greenlandic">Siulersuisut</a>
+            <a href="team.html" class="lang-content" data-lang="danish">Teamet</a>
         </div>
     </div>
 
@@ -63,6 +67,11 @@
                     <a href="insights.html" class="lang-content" data-lang="english">Insights</a>
                     <a href="insights.html" class="lang-content" data-lang="greenlandic">Paasisimasat</a>
                     <a href="insights.html" class="lang-content" data-lang="danish">Indblik</a>
+                </li>
+                <li>
+                    <a href="team.html" class="lang-content" data-lang="english">The Team</a>
+                    <a href="team.html" class="lang-content" data-lang="greenlandic">Siulersuisut</a>
+                    <a href="team.html" class="lang-content" data-lang="danish">Teamet</a>
                 </li>
             </ul>
 
@@ -119,7 +128,7 @@
         </div>
 
         <div class="insights-feed">
-	    <span style="display:none;">🆕</span>
+        <span style="display:none;">🆕</span>
 <a href="articles/2026-06-17/article.html" class="insight-item-link" data-category="commentary">
     <article class="insight-card">
         <div class="insight-thumbnail">
