--- a/team.html
+++ b/team.html
@@ -143,6 +143,24 @@
 
             <div class="insight-card-horizontal" style="margin-bottom: 2rem;">
                 <div style="flex: 0 0 200px;">
+                    <img src="media/bestyrelsen/simon.jpg" alt="Simon Bredsgaard Byrith" style="width:100%; border-radius: 15px;">
+                </div>
+                <div class="insight-info">
+                    <h3>Simon Bredsgaard Byrith</h3>
+                    <p class="card-meta-top">
+                        <span class="lang-content" data-lang="english">Vice Chairman</span>
+                        <span class="lang-content" data-lang="greenlandic">Siulittaasup tullia</span>
+                        <span class="lang-content" data-lang="danish">Næstformand</span>
+                    </p>
+<div class="bio-text">
+                        <p class="lang-content" data-lang="english">Simon Bredsgaard Byrith holds a degree from the University of Southern Denmark specializing in international security, public law, and sanctions policy. Having moved to Nuuk in June 2024, he brings experience from Venstre’s secretariat at the Folketinget and from Brussels working with agriculture and food policy. He is currently employed by the Government of Greenland, focusing on international affairs and Arctic administration.</p>
+                        <p class="lang-content" data-lang="greenlandic">Simon Bredsgaard Byrith Syddansk Universitetimi ilinniagaqarpoq isumannaallisaaneq, inatsisilerneq sanktioninullu politikki sammivigalugit. 2024-mi juunimi Nuummut nuuppoq, Venstrep Folketingimi allattoqarfianit Bruxellesimilu nunalerinermut nerisassaqarnermullu politikki pillugu misilittagaqarluni. Maanna Namminersorlutik Oqartussani atorfeqarpoq nunat tamalaat pissutaat Issittumilu aqutsineq suliaqarfigalugit.</p>
+                        <p class="lang-content" data-lang="danish">Simon Bredsgaard Byrith er uddannet fra Syddansk Universitet med speciale i international sikkerhed, folkeret og sanktionspolitik. Simon flyttede til Nuuk i juni 2024 og har erfaring fra Venstres folketingssekretariat samt fra Bruxelles med landbrug og fødevarer. Han er nu ansat i Grønlands Selvstyre, hvor han beskæftiger sig med internationale forhold og arktisk administration.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="insight-card-horizontal" style="margin-bottom: 2rem;">
+                <div style="flex: 0 0 200px;">
                     <img src="media/bestyrelsen/emilie.jpeg" alt="Emilie Krusell" style="width:100%; border-radius: 15px;">
                 </div>
                 <div class="insight-info">
