--- a/team.html
+++ b/team.html
@@ -120,7 +120,7 @@
             <span class="lang-content" data-lang="danish">Bestyrelsen</span>
         </h2>
 
-        <div class="team-list">
+<div class="team-list">
             
             <div class="insight-card-horizontal" style="margin-bottom: 2rem;">
                 <div style="flex: 0 0 200px;">
@@ -135,8 +135,8 @@
                     </p>
                     <div class="bio-text">
                         <p class="lang-content" data-lang="english">Malik holds a MA in Arctic Social Sciences, during which he spent half a year at the Greenland representation in Reykjavík gaining insight into the intricate foreign diplomatic mission of Greenland. His interest in foreign policy also led him to study at the Graduate School of International Relations at the International University of Japan.</p>
-                        <p class="lang-content" data-lang="greenlandic">Malik Peter Koch Hansen Issittumi Inuiaqatigiilerinermi BA-qarpoq, ilinniarnerminilu ukiup affaa Reykjavíkimi Kalaallit Nunaata aallartitaqarfianiilluni nunatta diplomatiikkut sulineranik paasisimasaqarnerulerpoq. Nunanut allanut politikkimik soqutiginninnerata Japanimi International University-mut ingerlatippaa.</p>
-                        <p class="lang-content" data-lang="danish">Malik Peter Koch Hansen har en BA i Arktisk Samfundsvidenskab, hvorunder han tilbragte et halvt år ved Grønlands repræsentation i Reykjavík for at få indsigt i Grønlands diplomatiske arbejde. Hans interesse for udenrigspolitik førte ham til Graduate School of International Relations ved International University of Japan.</p>
+                        <p class="lang-content" data-lang="greenlandic">Malik Peter Koch Hansen Issittumi Inuiaqatigiilerinermi MA-qarpoq, ilinniarnerminilu ukiup affaa Reykjavíkimi Kalaallit Nunaata aallartitaqarfianiilluni nunatta diplomatiikkut sulineranik paasisimasaqarnerulerpoq. Nunanut allanut politikkimik soqutiginninnerata Japanimi International University-mut ingerlatippaa.</p>
+                        <p class="lang-content" data-lang="danish">Malik Peter Koch Hansen har en MA i Arktisk Samfundsvidenskab, hvorunder han tilbragte et halvt år ved Grønlands repræsentation i Reykjavík for at få indsigt i Grønlands diplomatiske arbejde. Hans interesse for udenrigspolitik førte ham til Graduate School of International Relations ved International University of Japan.</p>
                     </div>
                 </div>
             </div>
@@ -152,13 +152,14 @@
                         <span class="lang-content" data-lang="greenlandic">Siulittaasup tullia</span>
                         <span class="lang-content" data-lang="danish">Næstformand</span>
                     </p>
-<div class="bio-text">
+                    <div class="bio-text">
                         <p class="lang-content" data-lang="english">Simon Bredsgaard Byrith holds a degree from the University of Southern Denmark specializing in international security, public law, and sanctions policy. Having moved to Nuuk in June 2024, he brings experience from Venstre’s secretariat at the Folketinget and from Brussels working with agriculture and food policy. He is currently employed by the Government of Greenland, focusing on international affairs and Arctic administration.</p>
                         <p class="lang-content" data-lang="greenlandic">Simon Bredsgaard Byrith Syddansk Universitetimi ilinniagaqarpoq isumannaallisaaneq, inatsisilerneq sanktioninullu politikki sammivigalugit. 2024-mi juunimi Nuummut nuuppoq, Venstrep Folketingimi allattoqarfianit Bruxellesimilu nunalerinermut nerisassaqarnermullu politikki pillugu misilittagaqarluni. Maanna Namminersorlutik Oqartussani atorfeqarpoq nunat tamalaat pissutaat Issittumilu aqutsineq suliaqarfigalugit.</p>
                         <p class="lang-content" data-lang="danish">Simon Bredsgaard Byrith er uddannet fra Syddansk Universitet med speciale i international sikkerhed, folkeret og sanktionspolitik. Simon flyttede til Nuuk i juni 2024 og har erfaring fra Venstres folketingssekretariat samt fra Bruxelles med landbrug og fødevarer. Han er nu ansat i Grønlands Selvstyre, hvor han beskæftiger sig med internationale forhold og arktisk administration.</p>
                     </div>
                 </div>
             </div>
+
             <div class="insight-card-horizontal" style="margin-bottom: 2rem;">
                 <div style="flex: 0 0 200px;">
                     <img src="media/bestyrelsen/emilie.jpeg" alt="Emilie Krusell" style="width:100%; border-radius: 15px;">
@@ -178,7 +179,7 @@
                 </div>
             </div>
 
-            <div class="insight-card-horizontal" style="margin-bottom: 2rem;">
+            <div class="insight-card-horizontal" style="margin-bottom: 2rem; filter: grayscale(1); opacity: 0.6;">
                 <div style="flex: 0 0 200px;">
                     <img src="media/bestyrelsen/ann-1.jpg" alt="Ann Storm Rubæk" style="width:100%; border-radius: 15px;">
                 </div>
@@ -197,7 +198,7 @@
                 </div>
             </div>
 
-            <div class="insight-card-horizontal" style="margin-bottom: 2rem;">
+            <div class="insight-card-horizontal" style="margin-bottom: 2rem; filter: grayscale(1); opacity: 0.6;">
                 <div style="flex: 0 0 200px;">
                     <img src="media/bestyrelsen/mikkel.jpg" alt="Mikkel Østergaard" style="width:100%; border-radius: 15px;">
                 </div>
@@ -216,7 +217,7 @@
                 </div>
             </div>
 
-            <div class="insight-card-horizontal" style="margin-bottom: 2rem;">
+            <div class="insight-card-horizontal" style="margin-bottom: 2rem; filter: grayscale(1); opacity: 0.6;">
                 <div style="flex: 0 0 200px;">
                     <img src="media/bestyrelsen/dorte.png" alt="Dorte Munch" style="width:100%; border-radius: 15px;">
                 </div>
