--- a/team.html
+++ b/team.html
@@ -124,7 +124,7 @@
             
             <div class="insight-card-horizontal" style="margin-bottom: 2rem;">
                 <div style="flex: 0 0 200px;">
-                    <img src="media/bestyrelsen/malik.jpg" alt="Malik Koch Hansen" style="width:100%; border-radius: 15px;">
+                    <img src="media/bestyrelsen/Malik.jpg" alt="Malik Koch Hansen" style="width:100%; border-radius: 15px;">
                 </div>
                 <div class="insight-info">
                     <h3>Malik Koch Hansen</h3>
@@ -162,7 +162,7 @@
 
             <div class="insight-card-horizontal" style="margin-bottom: 2rem;">
                 <div style="flex: 0 0 200px;">
-                    <img src="media/bestyrelsen/emilie.jpeg" alt="Emilie Krusell" style="width:100%; border-radius: 15px;">
+                    <img src="media/bestyrelsen/Emilie.jpeg" alt="Emilie Krusell" style="width:100%; border-radius: 15px;">
                 </div>
                 <div class="insight-info">
                     <h3>Emilie Krusell</h3>
@@ -181,7 +181,7 @@
 
             <div class="insight-card-horizontal" style="margin-bottom: 2rem; filter: grayscale(1); opacity: 0.6;">
                 <div style="flex: 0 0 200px;">
-                    <img src="media/bestyrelsen/ann-1.jpg" alt="Ann Storm Rubæk" style="width:100%; border-radius: 15px;">
+                    <img src="media/bestyrelsen/Ann-1.jpg" alt="Ann Storm Rubæk" style="width:100%; border-radius: 15px;">
                 </div>
                 <div class="insight-info">
                     <h3>Ann Storm Rubæk</h3>
@@ -200,7 +200,7 @@
 
             <div class="insight-card-horizontal" style="margin-bottom: 2rem; filter: grayscale(1); opacity: 0.6;">
                 <div style="flex: 0 0 200px;">
-                    <img src="media/bestyrelsen/mikkel.jpg" alt="Mikkel Østergaard" style="width:100%; border-radius: 15px;">
+                    <img src="media/bestyrelsen/Mikkel.jpg" alt="Mikkel Østergaard" style="width:100%; border-radius: 15px;">
                 </div>
                 <div class="insight-info">
                     <h3>Mikkel Østergaard</h3>
@@ -219,7 +219,7 @@
 
             <div class="insight-card-horizontal" style="margin-bottom: 2rem; filter: grayscale(1); opacity: 0.6;">
                 <div style="flex: 0 0 200px;">
-                    <img src="media/bestyrelsen/dorte.png" alt="Dorte Munch" style="width:100%; border-radius: 15px;">
+                    <img src="media/bestyrelsen/Dorte.png" alt="Dorte Munch" style="width:100%; border-radius: 15px;">
                 </div>
                 <div class="insight-info">
                     <h3>Dorte Munch</h3>
@@ -297,4 +297,5 @@
         });
     </script>
 </body>
+
 </html>
